fix for viewport on mobile

--- a/style.css
+++ b/style.css
@@ -10,9 +10,10 @@ html {
 }
 
 body {
-	min-height: 100vh;
+	min-height: 100dvh;
 	background: url(assets/bg.jpg) no-repeat center center fixed;
 	background-size: cover;
+	background-color: #000;
 	backdrop-filter: blur(1px);
 	color: whitesmoke;
 
